[package]
name = "glap-rs-server"
version = "0.1.0"
authors = ["Christian7573 <cag4561@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.6.2"
features = ["attributes", "unstable"]

[dependencies.async-tungstenite]
version = "0.8.0"
features = ["async-std-runtime", "async-native-tls"]

[dependencies.surf]
version = "= 2.0.0-alpha.5"
# default-features = false
features = ["curl-client", "encoding", ]
# [dependencies.http-client]
# version = "5.0.0"
# default-features = false
# features = ["curl_client"]

[dependencies]
nphysics2d = "0.17.0"
nalgebra = "0.22.0"
futures = "0.3.5"
num-traits = "0.2.12"
ncollide2d = "0.24.0"
byte = "0.2.4"
rand = "0.7.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
