[package]
name = "glap-rs-server"
version = "0.1.0"
authors = ["Christian7573 <cag4561@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.6.2"
features = ["attributes", "unstable"]

[dependencies.surf]
version = "= 2.0.0-alpha.5"
features = ["curl-client", "encoding", ]

[dependencies]
nphysics2d = "0.17.0"
nalgebra = "0.22.0"
futures = "0.3.5"
num-traits = "0.2.12"
ncollide2d = "0.24.0"
byte = "0.2.4"
rand = "0.7.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.13.0"
sha = "1.0.3"
futures-timer = "3.0.2"
lazy_static = "1.4.0"
