[package]
name = "glap-rs-server"
version = "0.1.0"
authors = ["Christian7573 <cag4561@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.9.0"
default-features = false
features = ["attributes", "unstable", "std"]

[dependencies.surf]
version = "2.2.0"
default-features = false
features = ["curl-client", "encoding", ]

[dependencies.rapier2d]
version = "0.9.2"
features = ["simd-stable"]

[dependencies]
serde = "1.0.125"
lazy_static = "1.4.0"
futures-timer = "3.0.2"
serde_json = "1.0.64"
byte = "0.2.6"
rand = "0.8.3"
futures = "0.3.14"
sha = "1.0.3"
generational-arena = "0.2.8"
signal-hook-async-std = "0.2.1"
signal-hook = "0.3.8"
base64 = "0.13.0"
